extends CharacterBody2D


@export var speed: float = 100.0
@export var hp: int = 100
@export var shild:int = 100
@export var rotation_speed: float =  5.0 # –°–∫–æ—Ä–æ—Å—Ç—å –ø–æ–≤–æ—Ä–æ—Ç–∞ —Å–ø—Ä–∞–π—Ç–∞
@onready var direction_marker = $"look at"
@onready var sprite = $EnemyBlack2
var player: Node2D 
var is_dead: bool = false
var should_follow = false
func _ready() -> void:
	player = $"../player"
#===================–ü–û–õ–£–ß–ï–ù–ò–ï –£–†–û–ù–ê===================
func take_damage(damage: int):
	if is_dead: # ‚Üê –ó–ê–©–ò–¢–ê –û–¢ –£–†–û–ù–ê –ü–û–°–õ–ï –°–ú–ï–†–¢–ò
		return
	if shild > 0:
		shild -= damage
		if shild < 0:
			shild =  0
	else:
		hp -= damage
		if hp < 0:
			hp = 0
	dei()
#===================–°–ú–ï–†–¨===================
func dei():
	if hp <= 0 and not is_dead:
		is_dead = true
		print("üíÄ –í—Ä–∞–≥ —É–º–µ—Ä!")
		await get_tree().create_timer(0.5).timeout
		queue_free()
#===================–ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–ï===================
func follow():
	if not is_instance_valid(player):
		stop_follow()
		return
	
	##===================–ü–û–í–û–†–û–¢ –ü–û –ú–ê–†–ö–ï–†–£===================
	direction_marker.look_at(player.global_position)
	var target_rotation = direction_marker.rotation - PI/2
	sprite.rotation = lerp_angle(sprite.rotation, target_rotation, rotation_speed * get_physics_process_delta_time())
	velocity = direction_marker.transform.x * speed

#===================–ü–†–ï–ö–†–ê–©–ï–ù–ò–ï –ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–Ø===================
func stop_follow():

	velocity = Vector2.ZERO
	print("üëª –ò–≥—Ä–æ–∫ –≤—ã—à–µ–ª –∏–∑ –∑–æ–Ω—ã! –ü—Ä–µ–∫—Ä–∞—â–∞—é –ø—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏–µ.")
#===================PHYSICAL PROCESS===================
func _physics_process(_delta: float) -> void:
	if should_follow and player:
		follow()
	move_and_slide()
#===================–ü–û–ü–ê–î–ê–ù–ò–ï –í –ó–û–ù–£ –ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–Ø===================
func _on_area_2d_body_entered(body: Node2D) -> void:
	if body.is_in_group('player'):
		player = body
		should_follow = true
		print("üéØ –ò–≥—Ä–æ–∫ –æ–±–Ω–∞—Ä—É–∂–µ–Ω! –ù–∞—á–∏–Ω–∞—é –ø—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏–µ.")
#===================–í–´–•–û–î –ò–ó –ó–û–ù–´ –ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–Ø===================
func _on_area_2d_body_exited(body: Node2D) -> void:
	if body.is_in_group('player'):
		should_follow = false
		stop_follow()
		print("üëª –ò–≥—Ä–æ–∫ –ø–æ—Ç–µ—Ä—è–Ω!.")
	

#===================–ü–û–ü–ê–î–ê–ù–ò–ï –í –ó–û–ù–£ –ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–Ø===================
func _on_follow_body_entered(body: Node2D) -> void:
	if body.is_in_group('player'):
		player = body
		should_follow = true
		print("üéØ –ò–≥—Ä–æ–∫ –æ–±–Ω–∞—Ä—É–∂–µ–Ω! –ù–∞—á–∏–Ω–∞—é –ø—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏–µ.")

#===================–í–´–•–û–î –ò–ó –ó–û–ù–´ –ü–†–ï–°–õ–ï–î–û–í–ê–ù–ò–Ø===================
func _on_follow_body_exited(body: Node2D) -> void:
	if body.is_in_group('player'):
		should_follow = false
		stop_follow()
		print("üëª –ò–≥—Ä–æ–∫ –ø–æ—Ç–µ—Ä—è–Ω!.")
